--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar">
             <div class="nav-logo">
                 <img src="../img/logo-1.jpg" alt="">
-                <span class="nav-name">hieurury</span>
+                <span class="nav-name">CTF</span>
             </div>
             <div class="nav-menu">
                 <div class="menu-icon">
@@ -19,20 +19,131 @@
                 </div>
                 <ul class="menu">
                     <li>
-                        <a href="">Giới thiệu</a>
+                        <a href="">Món ăn</a>
                     </li>
                     <li>
-                        <a href="">Bài tập</a>
+                        <a href="">Thức uống</a>
                     </li>
                     <li>
-                        <a href="">Sản phẩm</a>
+                        <a href="">Phản hổi</a>
+                    </li>
+                    <li>
+                        <a href="">Tài khoản</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </head>
     <main>
-        <div class="container">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-2" style="padding: 0;">
+                    <div class="left-layout">
+                        <h3 class="sub-title">Điều hướng</h3>
+                        <ul class="left-menu menu-list">
+                            <li class="menu-item">
+                                <a href="">Thực phẩm</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="">Đồ uống</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="">Đặc sản</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-10">
+                    <div class="right-layout">
+                        <div class="slide-container">
+                            <div class="slide-wrapper">
+                                <div id="carouselExample" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="../img/main-page/banh-xeo.jpg" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="..." class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="..." class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                  </div>
+                            </div>
+                        </div>
+                        <div class="content-container">
+                            <h1 class="title">Món đặc trưng</h1>
+                            <div class="products-container">
+                               <section class="product-wrapper">
+                                    <div class="product-content">
+                                        <div class="wrapper-img">
+                                            <img src="../img/main-page/banh-canh-cua.jpg" alt="">
+                                        </div>
+                                        <div class="wrapper-content">
+                                            <h3 class="content-title">Tên sản phẩm</h3>
+                                            <p class="content-description">Mô tả về sản phẩm</p>
+                                        </div>
+                                        <div class="wrapper-controls">
+                                            <span class="view">
+                                                <i class="bi bi-eye-fill"></i>
+                                                4.7k
+                                            </span>
+                                            <i class="bi bi-heart"></i>
+                                        </div>
+                                    </div>
+                               </section> 
+
+                               <section class="product-wrapper">
+                                    <div class="product-content">
+                                        <div class="wrapper-img">
+                                            <img src="../img/main-page/banh-canh-cua.jpg" alt="">
+                                        </div>
+                                        <div class="wrapper-content">
+                                            <h3 class="content-title">Tên sản phẩm</h3>
+                                            <p class="content-description">Mô tả về sản phẩm</p>
+                                        </div>
+                                        <div class="wrapper-controls">
+                                            <span class="view">
+                                                <i class="bi bi-eye-fill"></i>
+                                                2.8k
+                                            </span>
+                                            <i class="bi bi-heart"></i>
+                                        </div>
+                                    </div>
+                                </section>
+                                
+                                <section class="product-wrapper">
+                                    <div class="product-content">
+                                        <div class="wrapper-img">
+                                            <img src="../img/main-page/banh-canh-cua.jpg" alt="">
+                                        </div>
+                                        <div class="wrapper-content">
+                                            <h3 class="content-title">Tên sản phẩm</h3>
+                                            <p class="content-description">Mô tả về sản phẩm</p>
+                                        </div>
+                                        <div class="wrapper-controls">
+                                            <span class="view">
+                                                <i class="bi bi-eye-fill"></i>
+                                                12.2k
+                                            </span>
+                                            <i class="bi bi-heart"></i>
+                                        </div>
+                                    </div>
+                                </section>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </main>
