--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -34,6 +34,9 @@
                         <a href="">Thức uống</a>
                     </li>
                     <li>
+                        <a href="">Địa điểm</a>
+                    </li>
+                    <li>
                         <a href="">Phản hổi</a>
                     </li>
                     <li>
